remove secret keys

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=travellog
+spring.data.mongodb.uri=mongodb+srv://poo1poo2022:qlUWenaShfcAaRKT@cluster0.xqlo9ch.mongodb.net/travelapp?retryWrites=true&w=majority&appName=Cluster0
+
+spring.data.mongodb.database=travelapp
